# 01INT-AWG-SW

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
libs/: includes.h
libs/debug/: debugger.cpp  debugger.h
libs/event_reader/: reader.cpp  reader.h
libs/font_cache/: font_cache.cpp  font_cache.h
libs/logger/: logger.cpp  logger.h
libs/monitor/: engine_monitor.cpp  engine_monitor.h
libs/physics/collisions/: collisions.cpp  collisions.h
libs/physics/rigidbody/: rigidbody.cpp  rigidbody.h
libs/renderer/: renderer.cpp  renderer.h
libs/tiny_xml/: tinyxml2.cpp
libs/typedefs/: typedefs.h
libs/ui_elements/scene/: scene.cpp  scene.h
libs/ui_elements/touchable/: touchable.cpp  touchable.h
libs/updater/: updater.cpp  updater.h
libs/window/: window.cpp  window.h
src/app/: app.cpp  app.h  includes.h
src/game_scenes/menu/start_menu/: start_menu.cpp  start_menu.h
src/player/: player.cpp  player.h
src/window/: window.cpp  window.h
